--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 3,
-  "name": "批量替换输入框文本",
-  "description": "查找并替换页面中所有输入框的文本内容，新增标题提取",
-  "version": "1.1",
+  "name": "上货助手",
+  "description": "包含标题、sku优化和批量替换功能",
+  "version": "1.3",
   "action": {
     "default_popup": "popup.html",
     "default_icon": {
